modules/gdscript/tests/scripts/analyzer/errors/function_used_as_property.gd
func function():
	pass


func test():
	function = 25
